# bucso_repo

./: .gitignore  README.md  project_tree.py  project_tree_out.json  prompt.txt  pyproject.toml  restore_from_project_tree.py
examples/: IF2_Model_01.yaml  LMX2592_A.yaml  LMX2595_A.yaml  MXR1.yaml  MXR1_LTC5553.yaml  MXR2.yaml  MXR2_MDB44H.yaml  RF_S21_28to31GHz.csv  config.yaml
src/bucso/: cli.py  filters.py  mixer.py  models.py  policy.py  spur.py  synth.py  tiling.py  utils.py
tests/: conftest.py  test_early_rejects.py  test_filters_if2_delta.py  test_mixer_synth.py  test_policy_robustness_and_determinism.py  test_spur_enumeration.py  test_units.py  test_utils_bins.py
